Add/update file headers and improvements

--- a/experiments/configs/baseline_comparison.yaml
+++ b/experiments/configs/baseline_comparison.yaml
@@ -1,3 +1,21 @@
+# -*- coding: utf-8 -*-
+#
+# Copyright (c) 2024 Dimitrios Kafetzis
+#
+# This file is part of the Transformer Inference Simulator project.
+# Licensed under the MIT License; you may not use this file except in compliance
+# with the License. You may obtain a copy of the License at
+#   https://opensource.org/licenses/MIT
+#
+# Author:  Dimitrios Kafetzis (dimitrioskafetzis@gmail.com)
+# File:    experiments/configs/baseline_comparison.yaml
+# Description:
+#   Defines the YAML configuration for baseline algorithms comparison,
+#   referencing multiple distribution strategies such as resource-aware,
+#   greedy, round robin, etc., for distributed transformer inference.
+#
+# ---------------------------------------------------------------------------
+
 experiment:
   name: "baseline_comparison"
   description: "Comparison of baseline algorithms against resource-aware distribution"
