--- a/experiments/configs/distributed_edge.yaml
+++ b/experiments/configs/distributed_edge.yaml
@@ -1,3 +1,21 @@
+# -*- coding: utf-8 -*-
+#
+# Copyright (c) 2024 Dimitrios Kafetzis
+#
+# This file is part of the Transformer Inference Simulator project.
+# Licensed under the MIT License; you may not use this file except in compliance
+# with the License. You may obtain a copy of the License at
+#   https://opensource.org/licenses/MIT
+#
+# Author:  Dimitrios Kafetzis (dimitrioskafetzis@gmail.com)
+# File:    experiments/configs/distributed_edge.yaml
+# Description:
+#   Specifies the network, resource, and workload configurations for a
+#   distributed-edge scenario with multiple heterogeneous devices and
+#   moderate bandwidth links for Transformer inference.
+#
+# ---------------------------------------------------------------------------
+
 network:
   topology_type: "distributed_edge"
   num_devices: 16
