--- a/experiments/configs/edge_cluster.yaml
+++ b/experiments/configs/edge_cluster.yaml
@@ -1,3 +1,21 @@
+# -*- coding: utf-8 -*-
+#
+# Copyright (c) 2024 Dimitrios Kafetzis
+#
+# This file is part of the Transformer Inference Simulator project.
+# Licensed under the MIT License; you may not use this file except in compliance
+# with the License. You may obtain a copy of the License at
+#   https://opensource.org/licenses/MIT
+#
+# Author:  Dimitrios Kafetzis (dimitrioskafetzis@gmail.com)
+# File:    experiments/configs/edge_cluster.yaml
+# Description:
+#   Defines an edge cluster scenario with a small number of devices and
+#   relatively high interconnect bandwidth, simulating campus cluster or
+#   mini edge data center environments for Transformer inference.
+#
+# ---------------------------------------------------------------------------
+
 network:
   topology_type: "edge_cluster"
   num_devices: 8
