--- a/experiments/configs/hybrid_cloud_edge.yaml
+++ b/experiments/configs/hybrid_cloud_edge.yaml
@@ -1,3 +1,21 @@
+# -*- coding: utf-8 -*-
+#
+# Copyright (c) 2024 Dimitrios Kafetzis
+#
+# This file is part of the Transformer Inference Simulator project.
+# Licensed under the MIT License; you may not use this file except in compliance
+# with the License. You may obtain a copy of the License at
+#   https://opensource.org/licenses/MIT
+#
+# Author:  Dimitrios Kafetzis (dimitrioskafetzis@gmail.com)
+# File:    experiments/configs/hybrid_cloud_edge.yaml
+# Description:
+#   Specifies a hybrid cloud-edge configuration for distributed Transformer
+#   inference, including both high-capacity cloud nodes and resource-limited
+#   edge devices with significantly different bandwidth links.
+#
+# ---------------------------------------------------------------------------
+
 network:
   topology_type: "hybrid_cloud_edge"
   num_devices: 24
