--- a/experiments/configs/distributed_edge.yaml
+++ b/experiments/configs/distributed_edge.yaml
@@ -37,7 +37,7 @@ resources:
   seed: 42
 
 workload:
-  model_types: ["SMALL", "MEDIUM"]  # Both small and medium models
+  model_type: "MEDIUM" 
   initial_sequence_lengths: [128, 256, 512]
   generation_steps: [32, 64, 128]
   precision_bytes: 4
