Addition of extra toy example scenarios and improvement of latency computation. Addition also of extradebug messages and fixing of output experiment_results.json file production. Addition also of a plotting script that takes as input the produced experiment_results.json file.

--- a/experiments/configs/edge_cluster.yaml
+++ b/experiments/configs/edge_cluster.yaml
@@ -37,7 +37,7 @@ resources:
   seed: 42
 
 workload:
-  model_type: "SMALL"  # 8 attention heads, D=512
+  model_type: "LARGE"  # 8 attention heads, D=512
   initial_sequence_lengths: [128, 256]
   generation_steps: [32, 64]
   precision_bytes: 4
